--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "new",
+  "homepage": "http://lamawebdev.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@sentry/react": "^7.22.0",
+    "@sentry/tracing": "^7.22.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "emailjs-com": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.6.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
